<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_message">暂时还没数据</string>

    <string name="error_message">网络错误,请稍后重试</string>

    <string name="homepage_part1_1">三会一课</string>
    <string name="homepage_part1_2">主题活动</string>
    <string name="homepage_part1_3">在线答题</string>
    <string name="homepage_part1_4">工作任务</string>
    <string name="homepage_part2_1">每日一题</string>
    <string name="homepage_part2_2">在新的历史条件下，我们党面临着执政，改革开放，（     ）外部环境“四大考验”</string>
    <string name="homepage_part3_2">  二十四字社会主义核心价值观出自《关于培育和践行社会主义核心价值观的意见》，其主要内容为富强、民主、文明、和谐，自由、平等、公正、法治， 爱国、敬业、诚信、友善。2014年2月12日，《人民日报》登二十四字“社会主义核心价值观”。</string>
    <string name="homepage_part3_1">每日一课</string>
    <string name="more">更多</string>
    <string name="more2">展开</string>
    <string name="kaishidati">开始答题</string>

    <string name="homepage_bottom1">首页</string>
    <string name="homepage_bottom2">教育</string>
    <string name="homepage_bottom3">服务</string>
    <string name="homepage_bottom4">我的</string>

    <string name="search">搜索</string>

    <string name="service_text1_1">应急管理部有关负责人就《地方党政领导等等等</string>
    <string name="service_text1_sj">2018-5-24</string>
    <string name="service_help">有困难找组织</string>
    <string name="service_text2">《专业技术类公务员管理规定（试行）》图解</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="message_text1">为了响应学校开展特色党日的号召,加强党员的党性修养,推进支部建设,我支部计划开展紧紧围绕“强组织、增活力...</string>
    <string name="message_queren">确认提醒</string>

    <string name="dangri_text1">全体党员大会</string>
    <string name="dangri_ing">进行中...</string>
    <string name="sanhui_text1">进行中</string>
    <string name="sanhui_text2">已完成</string>
    <string name="sanhui_text3">所有活动</string>
    <string name="sanhui_weibaoming">未报名</string>
    <string name="dianjijinru">点击进入</string>
    <string name="zaixian_daikao">待考</string>
    <string name="zaixian_yikao">已考</string>
    <string name="zaixian_yiguoqi">已过期</string>
    <string name="weidu">未读</string>
    <string name="yidu">已读</string>
    <string name="weiwancheng">未完成</string>
    <string name="yiwancheng">已完成</string>
    <string name="wugengduo">无更多数据</string>
    <string name="quanbu">全部</string>
    <string name="dangzhangdanggui">党章党规</string>
    <string name="sanhuiyike">三会一课</string>
    <string name="zhidangzhiguo">治党治国</string>
    <string name="daiwobaoming">待我报名</string>
    <string name="woyibangming">我已报名</string>


    <string name="edu_text1"> 两学一做</string>
    <string name="edu_text2">廉政教育</string>
    <string name="edu_text3">学习十九大</string>
    <string name="edu_text4">习近平用典</string>
    <string name="edu_text5">十九大系列专题片</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="lg_wj">忘记密码?</string>
    <string name="lg_noname">没有账户</string>
    <string name="lg_register">注册</string>
    <string name="lg_lonin">登录</string>
</resources>
