<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="109dp"
    android:background="@color/white"
    android:orientation="horizontal"

    android:gravity="center_vertical"
    >



   <LinearLayout
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:id="@+id/id_home_sanhuiyike_ly"
       android:layout_height="wrap_content"
       android:gravity="center"

       android:orientation="vertical">

        <RelativeLayout
            android:layout_width="@dimen/param_55dp"
            android:layout_height="55dp">



           <ImageView
               android:id="@+id/id_home_sanhuiyike_img"
               android:layout_width="@dimen/param_55dp"
               android:layout_height="55dp"


               android:gravity="center_vertical"
               android:src="@mipmap/icon_homepage_1" />

           <ImageView
               android:layout_width="@dimen/param_12dp"
               android:layout_height="@dimen/param_12dp"
               android:src="@mipmap/icon_home_dian"
               android:layout_alignParentTop="true"
               android:layout_alignParentRight="true"
               android:layout_margin="@dimen/param_4dp"

               />

        </RelativeLayout>



      <TextView
          android:id="@+id/id_home_sanhuiyike_tx"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal|center_vertical"

          android:text="@string/homepage_part1_1"
          android:textColor="@color/dj_textcolors"
          android:textSize="@dimen/param_14dp" />
   </LinearLayout>

   <LinearLayout
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:id="@+id/id_home_dandri_ly"
       android:layout_height="wrap_content"
       android:gravity="center"

       android:orientation="vertical">

      <RelativeLayout
          android:layout_width="@dimen/param_55dp"
          android:layout_height="55dp">



         <ImageView
             android:id="@+id/id_home_dangri_img"
             android:layout_width="@dimen/param_55dp"
             android:layout_height="55dp"


             android:gravity="center_vertical"
             android:src="@mipmap/icon_homepage_2" />

         <ImageView
             android:visibility="gone"
             android:layout_width="@dimen/param_12dp"
             android:layout_height="@dimen/param_12dp"
             android:src="@mipmap/icon_home_dian"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_margin="@dimen/param_4dp"

             />

      </RelativeLayout>


      <TextView
          android:id="@+id/id_home_dandri_tx"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal|center_vertical"

          android:text="@string/homepage_part1_2"
          android:textColor="@color/dj_textcolors"
          android:textSize="@dimen/param_14dp" />
   </LinearLayout>
   <LinearLayout
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:id="@+id/id_home_zaixiandati_ly"
       android:layout_height="wrap_content"
       android:gravity="center"

       android:orientation="vertical">
      <RelativeLayout
          android:layout_width="@dimen/param_55dp"
          android:layout_height="55dp">



         <ImageView
             android:id="@+id/id_home_zaixiandati_img"
             android:layout_width="@dimen/param_55dp"
             android:layout_height="55dp"


             android:gravity="center_vertical"
             android:src="@mipmap/icon_homepage_3" />

         <ImageView
             android:layout_width="@dimen/param_12dp"
             android:layout_height="@dimen/param_12dp"
             android:src="@mipmap/icon_home_dian"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_margin="@dimen/param_4dp"
             android:visibility="gone"

             />

      </RelativeLayout>


      <TextView
          android:id="@+id/id_home_zaixiandati_tx"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal|center_vertical"

          android:text="@string/homepage_part1_3"
          android:textColor="@color/dj_textcolors"
          android:textSize="@dimen/param_14dp" />
   </LinearLayout>
   <LinearLayout
       android:layout_weight="1"
       android:layout_width="match_parent"
       android:id="@+id/id_bottmbarqz_ly1"
       android:layout_height="wrap_content"
       android:gravity="center"

       android:orientation="vertical">
      <RelativeLayout
          android:layout_width="@dimen/param_55dp"
          android:layout_height="55dp">



         <ImageView
             android:id="@+id/id_home_gongzuorenwu_img"
             android:layout_width="@dimen/param_55dp"
             android:layout_height="55dp"


             android:gravity="center_vertical"
             android:src="@mipmap/icon_homepage_4" />

         <ImageView
             android:layout_width="@dimen/param_12dp"
             android:layout_height="@dimen/param_12dp"
             android:src="@mipmap/icon_home_dian"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_margin="@dimen/param_4dp"
android:visibility="gone"
             />

      </RelativeLayout>


      <TextView
          android:id="@+id/id_bottom_text001"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal|center_vertical"

          android:text="@string/homepage_part1_4"
          android:textColor="@color/dj_textcolors"
          android:textSize="@dimen/param_14dp" />
   </LinearLayout>



</LinearLayout>